[package]
name = "near-cache"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.56.0"
edition = "2021"

[dependencies]
lru = "0.6.5"

[dev-dependencies]
bencher = "0.1.5"
rand = "0.7"

[[bench]]
name = "cache"
harness = false
